--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -4,6 +4,16 @@
     <h1>Hello {{ name }}</h1>
     {% else %}
     <h1>Hello World</h1>
-    {% endif %}
+    {% endif %} {{orders}} {{product1}} {{customer1}} <br />
+    {{collection}} {% comment %}
+    <ul>
+      {%for product in products %}
+      <li>
+        {{product.customer.first_name}} - {{product.placed_at}} -
+        {{product.product.title}}
+      </li>
+      {% endfor %}
+    </ul>
+    {% endcomment %}
   </body>
 </html>
