--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -4,6 +4,9 @@
     <h1>Hello {{ name }}</h1>
     {% else %}
     <h1>Hello World</h1>
-    {% endif %} {{result}}
+    {% endif %} <br />
+    {% for customer in result %}
+    <p>{{customer}} : {{customer.orders}}</p>
+    {% endfor %}
   </body>
 </html>
